// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageItem component MessageiItem empty snapshot  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MessageItem component MessageiItem snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="messages__list"
      >
        <li
          class="item"
          style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
        >
          <span>
            User1
          </span>
          <p>
            hello friend
          </p>
          <img
            alt="close"
            class="btn"
            src="close.png"
          />
        </li>
        <li
          class="item"
          style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
        >
          <span>
            User2
          </span>
          <p>
            hello friend1
          </p>
          <img
            alt="close"
            class="btn"
            src="close.png"
          />
        </li>
        <li
          class="item"
          style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
        >
          <span>
            User3
          </span>
          <p>
            hello friend2
          </p>
          <img
            alt="close"
            class="btn"
            src="close.png"
          />
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="messages__list"
    >
      <li
        class="item"
        style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
      >
        <span>
          User1
        </span>
        <p>
          hello friend
        </p>
        <img
          alt="close"
          class="btn"
          src="close.png"
        />
      </li>
      <li
        class="item"
        style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
      >
        <span>
          User2
        </span>
        <p>
          hello friend1
        </p>
        <img
          alt="close"
          class="btn"
          src="close.png"
        />
      </li>
      <li
        class="item"
        style="margin: 10px 10px 10px auto; border: 2px solid green; padding: 20px; border-radius: 10px;"
      >
        <span>
          User3
        </span>
        <p>
          hello friend2
        </p>
        <img
          alt="close"
          class="btn"
          src="close.png"
        />
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
